--- a/carritoAutomovil/src/index.css
+++ b/carritoAutomovil/src/index.css
@@ -1,68 +1,43 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+/* index.css */
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.carrito {
+    position: relative; /* Agregar posicionamiento relativo al contenedor del carrito */
+    width: 4rem; /* Reducir el tamaño del carrito */
   }
-  a:hover {
-    color: #747bff;
+  
+  .carrito-content {
+    width: 40rem; /* Cambiar el ancho del contenedor del contenido del carrito según tus necesidades */
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0.5rem;
+    background-color: #fff;
+    padding: 10px;
+    border: 1px solid #ccc;
   }
-  button {
-    background-color: #f9f9f9;
+  
+  
+  .carrito-container:hover .carrito-content {
+    display: block; /* Muestra el contenido del carrito al pasar el mouse sobre el contenedor del carrito */
   }
-}
+  
+  .carrito-content img {
+    width: 60%; /* Reducir el tamaño de la imagen en el contenido del carrito en un 80% */
+  }
+
+  .imagen-automovil {
+    max-width: 100px; /* Establece el ancho máximo deseado para la imagen */
+    width: auto; /* Permite que la imagen mantenga su relación de aspecto original */
+  }
+  .img-fluid {
+    width: 80%; /* Cambiar el tamaño del logo */
+  }
+
+  
+  
+  .header {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/img/header.jpg");
+    background-position: 50%;
+    background-size: cover;
+    position: relative;
+  }
